crates/sotf-plugins/tests/snapshots/render_plan_snapshots__binaural__binaural__desktop_1200.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "binaural",
  "width": 1200.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "CONTROLS"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 1,
      "param_name": "Input Channels",
      "control_type": "label",
      "unit": "ch",
      "range": [
        2.0,
        16.0
      ],
      "read_only": true,
      "enabled": false
    }
  ],
  "main_groups": [
    {
      "id": "CONTROLS",
      "title": "CONTROLS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "SOFA File",
          "control_type": "file_picker",
          "unit": "",
          "range": null,
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Externalization",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Near-field",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Crossfade Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 9,
          "param_name": "Crossfade",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            10.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Reverb",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Late Reverb",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 6,
          "param_name": "Reverb Mix",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": false
        },
        {
          "param_index": 7,
          "param_name": "Reverb Time",
          "control_type": "knob",
          "unit": "s",
          "range": [
            0.1,
            5.0
          ],
          "read_only": false,
          "enabled": false
        },
        {
          "param_index": 8,
          "param_name": "Reverb Damping",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": false
        }
      ]
    },
    {
      "name": "Tracking",
      "controls": [
        {
          "param_index": 10,
          "param_name": "Head Yaw",
          "control_type": "knob",
          "unit": "deg",
          "range": [
            -180.0,
            180.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 11,
          "param_name": "Head Pitch",
          "control_type": "knob",
          "unit": "deg",
          "range": [
            -180.0,
            180.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 12,
          "param_name": "Head Roll",
          "control_type": "knob",
          "unit": "deg",
          "range": [
            -180.0,
            180.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 14,
          "param_name": "Head Width",
          "control_type": "knob",
          "unit": "cm",
          "range": [
            10.0,
            25.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 15,
          "param_name": "Ear Height",
          "control_type": "knob",
          "unit": "cm",
          "range": [
            4.0,
            16.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "name": "Setup",
      "controls": [
        {
          "param_index": 13,
          "param_name": "HRTF Database",
          "control_type": "file_picker",
          "unit": "",
          "range": null,
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
