crates/sotf-plugins/tests/snapshots/render_plan_snapshots__binaural__binaural__ipad_landscape.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "binaural",
  "width": 1024.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 0,
      "param_name": "SOFA File",
      "control_type": "file_picker",
      "unit": "",
      "range": null,
      "read_only": false
    },
    {
      "param_index": 1,
      "param_name": "Input Channels",
      "control_type": "label",
      "unit": "ch",
      "range": [
        2.0,
        16.0
      ],
      "read_only": true
    },
    {
      "param_index": 2,
      "param_name": "Optimization",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "title": "CONTROLS",
      "controls": [
        {
          "param_index": 3,
          "param_name": "Externalization",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 4,
          "param_name": "Near-field",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
