crates/sotf-plugins/tests/snapshots/render_plan_snapshots__binaural__binaural__iphone_landscape.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "binaural",
  "width": 844.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "config_controls": [
    {
      "param_index": 0,
      "param_name": "SOFA File",
      "control_type": "file_picker",
      "unit": "",
      "range": null,
      "read_only": false
    },
    {
      "param_index": 1,
      "param_name": "Input Channels",
      "control_type": "label",
      "unit": "ch",
      "range": [
        2.0,
        16.0
      ],
      "read_only": true
    }
  ],
  "main_groups": [
    {
      "title": "CONTROLS",
      "controls": [
        {
          "param_index": 2,
          "param_name": "Externalization",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "Near-field",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 4,
          "param_name": "Crossfade Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Reverb",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Late Reverb",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "Reverb Mix",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 7,
          "param_name": "Reverb Time",
          "control_type": "knob",
          "unit": "s",
          "range": [
            0.1,
            5.0
          ],
          "read_only": false
        },
        {
          "param_index": 8,
          "param_name": "Reverb Damping",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
